nextcloud/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  serviceName: "nextcloud"
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /var/www/html
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 25Gi
