nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: ClusterIP 
  selector:
    app: nextcloud
  ports:
  - port: 8080
    targetPort: 80
